Just a little bit of reorg.

--- a/latex/siggraph2013/results.tex
+++ b/latex/siggraph2013/results.tex
@@ -5,6 +5,8 @@ The data-driven probabilistic model we have presented produces good-looking patt
 
 \remark{Discuss parameters used to train model ``unless otherwise specified''. Number of artists, weights, etc.}
 
+\remark{Describe how we use the Colourlovers site to render the final images.}
+
 \subsection{Coloring Pattern Templates}
 
 \begin{figure*}[ht]
