Fleshing out the approach section.

--- a/latex/siggraph2013/spatialcolor.tex
+++ b/latex/siggraph2013/spatialcolor.tex
@@ -90,3 +90,5 @@ Finally, to evaluate the probability density of a property value, we use kernel 
 This approach is relatively fast. Because the features of a pattern template do not change during inference, we only need to compute the discretized conditional pdfs once per tuple of group, segment, or adjacency and their associated property when generating a coloring.~\remark{D: \emph{I} know what you mean, but I think readers would find this hard to parse. Maybe take a couple more sentences to make this clear?}
 
 TODO: possibly mention importance of multimodality at the beginning..how approaches that predict some best property value (i.e. averaging), don't take that into account.~\remark{D: Agreed. This should probably go all the way up at the beginning of Section~\ref{sec:spatialCompat}, where we first introduce the use of CPDs.}
+
+\remark{D: Do we want to end this section with a visualization of the factor graph for a simple, `toy' pattern template? Or would that confuse more than it would help?}
