--- a/latex/siggraph2013/approach.tex
+++ b/latex/siggraph2013/approach.tex
@@ -1,14 +1,14 @@
 \section{Approach}
 \label{sec:approach}
 
-%Restate the goal/problem. Use Sharon's more descriptive definition of a pattern template.
+The goal of this paper is to develop a method for automatically generating pattern coloring suggestions. The system should take as input a target pattern template, along with any additional user-provided constraints, and output a wide variety of colorings that evoke the coloring style desired by the user.
 
-Our approach takes as input a pattern template and any user-provided guidelines if available, and outputs suggested colorings for that pattern template. A pattern template specifies which regions in an image can be colored in, and which regions must map to the same color. For example, an image of a flower on a background may have a template that specifies all petals of the flower must be the same color, and all background regions must be the same color. In the rest of the paper, we refer to a set of regions that map to the same color as a \emph{color group}. Figure~\ref{fig:teaser} shows an example of a pattern template visualized in grayscale, where each different lightness level identifies a different color group. This pattern template representation is relatively easy to author from images composed of segments, such as web designs, renderings of 3D scenes, and line drawings. In this paper, we focus primarily on 2D graphic design patterns. 
+A \emph{pattern template} specifies which regions in an image can be colored in, and which regions must map to the same color. For example, an image of a flower on a background may have a template that specifies all petals of the flower must be the same color, and all background regions must be the same color. In the rest of the paper, we refer to a set of regions that map to the same color as a \emph{color group}. Figure~\ref{fig:teaser} shows an example of a pattern template visualized in grayscale, where each different lightness level identifies a different color group. This pattern template representation is relatively easy to author from images composed of segments, such as web designs, renderings of 3D scenes, and line drawings. In this paper, we focus primarily on 2D graphic design patterns. 
 
-%The first thing you might think to try is to use a color compatibility model. But here's what happens when you do that, and it doesn't look good.
+To generate attractive pattern colorings, a reasonable first step is to enforce that the colors used are `compatible' with one another, for some definition of color compatibility. Figure~\ref{fig:ColorCompatOnly} shows several patterns whose colors receive a high score under the color compatibility model of O'Donovan et al.~\shortcite{ODonovan}.~\remark{Make this figure.} While high-scoring colorings do exhibit a great degree of diversity, most of them simply don't look very good. They exhibit numerous problems, such foreground regions that blend into the background, and background regions that are too `loud' in color. Furthermore, color compatibility is a universal notion: it is not clear how to adapt it to match the style of a particular artist or the preferences of a particular user.
 
-%While color compatibility plays a role, it's clearly not the whole story. There's a combination of color compatibility and spatial consistency at work. Large, background regions are colored in a different manner than smaller, scattered `accent' regions.
+While compatibile colors are an important component of attractive pattern colorings, they do not tell the whole story. The notion of color compatibility, whether implemented via the O'Donovan model or any other, considers colors abstractly: it does not take into account how they will be spatially used in the pattern. Large, background regions are colored differently than smaller, scattered `accent' regions; a thin, ribbon-like region against an empty field is colored differently than a thin region amidst a mass of similar regions.
 
-%Rather than try to develop specialized algorithms for this problem, we had the insight that all of this stuff could be encoded in the extremely general probabilistic factor graph formalism. This allows us to leverage existing models of color compatibility, to plug in additional constraints in response to user input, and to handle interesting types of queries such as conditional inference.
+Rather than develop a specialized algorithm for this problem, we exploit the insight that both of these concerns---color harmony and spatial consistency---can be encoded in the extremely general framework of probabilistic factor graphs~\cite{FactorGraphs}. In the next section, we develop a data-driven factor graph model that can be trained on example colored patterns and sampled to generate new coloring suggestions. The factor graph formalism allows us to leverage existing models of color compatibility, to plug in additional coloring constraints in response to available user input, and to capture the characteristics of desired styles through established machine learning techniques.
 
-%To build a data-driven model, we obviously require a source of data. For the experiments in this paper, we used a dataset of colored patterns scraped from Colourlovers. The dataset contains 100 colored patterns for each of N artists. The artists were chosen based on...what, exactly? Popularity? Describe the image preprocessing we do (because we dont' have access to the original vector artwork?)
+To build a data-driven model, we require a source of training data. For the experiments in this paper, we used a dataset of colored patterns scraped from the Colourlovers website. The dataset contains 100 colored patterns for each of 82 artists---8200 patterns in total. The artists were chosen based on TODO.~\remark{Chosen based on popularity? Also, describe the image preprocessing we do (because we dont' have access to the original vector artwork?)}
