--- a/latex/siggraph2013/approach.tex
+++ b/latex/siggraph2013/approach.tex
@@ -1,26 +1,32 @@
 \section{Approach}
 \label{sec:approach}
 
-\remark{D: Tom Funkhouser sold me on the value of this section, and one of the best examples from his papers is in http://www.cs.princeton.edu/~funk/pvg01.pdf. I actually like combining the Approach and Overview sections into one shorter section, though.}
+%\remark{D: Tom Funkhouser sold me on the value of this section, and one of the best examples from his papers is in http://www.cs.princeton.edu/~funk/pvg01.pdf. I actually like combining the Approach and Overview sections into one shorter section, though.}
 
 %Restate the goal/problem. Use Sharon's more descriptive definition of a pattern template.
+We investigate the problem of computationally generating appealing colorings of a pattern to facilitate the creative coloring process. Although many people can easily detect if a pattern coloring is appealing, creating an appealing coloring can take much more time and effort. The process often involves much trial-and-error as well as tweaking of colors, due to constraints between neighboring regions. Since the relationship between neighboring colors largely impacts color appearance, changing one color also often results in cascading changes to neighboring colors. Even experienced artists create quick thumbnail colorings to explore potential color effects before diving in on their final work~\cite{ColorPaletteTools}. A system that provides diverse and appealing coloring suggestions would let the user quickly explore possibilities. In addition, allowing the user to control the process by specifying guidelines helps them make more global changes to a coloring and personalize suggestions to their own sense of aesthetics.
 
-%The first thing you might think to try is to use a color compatibility model. But here's what happens when you do that, and it doesn't look good.
-
-%While color compatibility plays a role, it's clearly not the whole story. There's a combination of color compatibility and spatial consistency at work. Large, background regions are colored in a different manner than smaller, scattered `accent' regions.
-
-%Rather than try to develop specialized algorithms for this problem, we had the insight that all of this stuff could be encoded in the extremely general probabilistic factor graph formalism. This allows us to leverage existing models of color compatibility, to plug in additional constraints in response to user input, and to handle interesting types of queries such as conditional inference.
-
-%To build a data-driven model, we obviously require a source of data. For the experiments in this paper, we used a dataset of colored patterns scraped from Colourlovers. The dataset contains 100 colored patterns for each of N artists. The artists were chosen based on...what, exactly? Popularity?
-
-Restate problem statement, why it's hard, and our approach (emphasizing the key idea)~\remark{Why it's hard: This might be the best place to show the results when we only use color compatibility, i.e. ``As a first approach, you might try using existing color compatibility models...'' and then show how that doesn't work, thus motivating the machinery we're about to describe.}
+\remark{S: These are things I've read informally before and somewhat experienced, but citing more sources that describes these difficulties in the coloring process might be good. Similar statements on the coloring process would be nice in the introduction as well.}
 
 %Start of notes on pattern template terminology/definition.
 Our approach takes as input a pattern template and any user-provided guidelines if available, and outputs suggested colorings for that pattern template. A pattern template specifies which regions in an image can be colored in, and which regions must map to the same color. For example, an image of a flower on a background may have a template that specifies all petals of the flower must be the same color, and all background regions must be the same color. In the rest of the paper, we refer to the set of regions that map to the same color as a \emph{color group}. Figure~\ref{fig:teaser} shows an example of a pattern template visualized in grayscale, where each different lightness level identifies a different color group. This pattern template representation is relatively easy to author from images composed of segments, such as web designs, renderings of 3D scenes, and line drawings. In this paper, we focus on 2D graphic design patterns. 
-%S: An alternative description of a pattern template: A pattern template is a segmented image with additional specifications on which segments must have the same color, or in other words, belong to the same color group
+
+%The first thing you might think to try is to use a color compatibility model. But here's what happens when you do that, and it doesn't look good. While color compatibility plays a role, it's clearly not the whole story. There's a combination of color compatibility and spatial consistency at work. Large, background regions are colored in a different manner than smaller, scattered `accent' regions.
+One potential way of generating diverse colorings for a pattern template is to simply find appealing color themes and arbitrarily assign theme colors to the template (Figure ?). However, scoring a coloring based soley on the compatibility of its colors is not enough ~\cite{ColorPaletteTools}, as pattern appearance also relies on relative proportion and spatial arrangement of colors. For example, large background regions are often colored differently than smaller, scattered 'accent' regions. 
+
+\remark{S: We should also cite the Meier work in the Background section, since it is a color support system. However, it focuses on tools/interfaces for letting the user explore and generate good color themes (based on harmony rules or extracted from paintings) and play with composition. There's not much computation involved, and the user still has to assign colors to regions. Their suggestions for a particular pattern template are random assignments of theme colors to the pattern. We could say that we enable many of these applications/interfaces using a unified computational framework... 
+
+They also mention a color task analysis survey, so it could provide good ammunition. The survey results are informally described in the paper...I couldn't find a working link to the actual survey data.}
+
+%Rather than try to develop specialized algorithms for this problem, we had the insight that all of this stuff could be encoded in the extremely general probabilistic factor graph formalism. This allows us to leverage existing models of color compatibility, to plug in additional constraints in response to user input, and to handle interesting types of queries such as conditional inference.
+Rather than developing specialized algorithms for generating and assigning colors to patterns, our key idea is to encode the pattern colorization problem in a general probabilistic factor graph framework, and to train our optimization function based on existing datasets of attractive patterns. The framework allows us to leverage existing models of color compatibility and inspect their relative importance. In addition, we can include additional constraints in response to user input, and to handle different user queries, such as finding a good background color for a fixed foreground. We can also take advantage of existing Markov Chain Monte Carlo sampling techniques to generate multiple appealing colorings from our model.
+
+
+%To build a data-driven model, we obviously require a source of data. For the experiments in this paper, we used a dataset of colored patterns scraped from Colourlovers. The dataset contains 100 colored patterns for each of N artists. The artists were chosen based on...what, exactly? Popularity?
+
 
 %TODO: Mention/Describe Colourlovers dataset somewhere. Briefly describe image preprocessing, and final renderings (probably this will be in the probabilistic model section?). 
 
-% Examples of similar cases where factor graphs have been used (does image segmentation/labeling count?)
+
 
 Roadmap for the next section (which describes the technical details) / overview of the system.
