--- a/latex/siggraph2013/patternColoring.bib
+++ b/latex/siggraph2013/patternColoring.bib
@@ -320,3 +320,14 @@ language={English}
  address = {New York, NY, USA},
  keywords = {color optimization, color theme, histograms, soft segmentation, texture classes},
 } 
+
+@article{ColorPaletteTools,
+  title={Interactive color palette tools},
+  author={Meier, B.J. and Spalter, A.M. and Karelitz, D.B.},
+  journal={Computer Graphics and Applications, IEEE},
+  volume={24},
+  number={3},
+  pages={64--72},
+  year={2004},
+  publisher={IEEE}
+}
