oops, fixing broken Latex

--- a/latex/siggraph2013/approach.tex
+++ b/latex/siggraph2013/approach.tex
@@ -14,9 +14,7 @@ Our approach takes as input a pattern template and any user-provided guidelines 
 %The first thing you might think to try is to use a color compatibility model. But here's what happens when you do that, and it doesn't look good. While color compatibility plays a role, it's clearly not the whole story. There's a combination of color compatibility and spatial consistency at work. Large, background regions are colored in a different manner than smaller, scattered `accent' regions.
 One potential way of generating diverse colorings for a pattern template is to simply find appealing color themes and arbitrarily assign theme colors to the template (Figure ?). However, scoring a coloring based soley on the compatibility of its colors is not enough ~\cite{ColorPaletteTools}, as pattern appearance also relies on relative proportion and spatial arrangement of colors. For example, large background regions are often colored differently than smaller, scattered 'accent' regions. 
 
-\remark{S: We should also cite the Meier work in the Background section, since it is a color support system. However, it focuses on tools/interfaces for letting the user explore and generate good color themes (based on harmony rules or extracted from paintings) and play with composition. There's not much computation involved, and the user still has to assign colors to regions. Their suggestions for a particular pattern template are random assignments of theme colors to the pattern. We could say that we enable many of these applications/interfaces using a unified computational framework... 
-
-They also mention a color task analysis survey, so it could provide good ammunition. The survey results are informally described in the paper...I couldn't find a working link to the actual survey data.}
+\remark{S: We should also cite the Meier work in the Background section, since it is a color support system. However, it focuses on tools/interfaces for letting the user explore and generate good color themes (based on harmony rules or extracted from paintings) and play with composition. There's not much computation involved, and the user still has to assign colors to regions. Their suggestions for a particular pattern template are random assignments of theme colors to the pattern. We could say that we enable many of these applications/interfaces using a unified computational framework... They also mention a color task analysis survey, so it could provide good ammunition. The survey results are informally described in the paper...I couldn't find a working link to the actual survey data.}
 
 %Rather than try to develop specialized algorithms for this problem, we had the insight that all of this stuff could be encoded in the extremely general probabilistic factor graph formalism. This allows us to leverage existing models of color compatibility, to plug in additional constraints in response to user input, and to handle interesting types of queries such as conditional inference.
 Rather than developing specialized algorithms for generating and assigning colors to patterns, our key idea is to encode the pattern colorization problem in a general probabilistic factor graph framework, and to train our optimization function based on existing datasets of attractive patterns. The framework allows us to leverage existing models of color compatibility and inspect their relative importance. In addition, we can include additional constraints in response to user input, and to handle different user queries, such as finding a good background color for a fixed foreground. We can also take advantage of existing Markov Chain Monte Carlo sampling techniques to generate multiple appealing colorings from our model.
