--- a/latex/siggraph2013/patternColoring.tex
+++ b/latex/siggraph2013/patternColoring.tex
@@ -124,7 +124,7 @@
         Input pattern                   & Sampled colorings               & Random colorings                \\
     \end{tabular}
 %\end{table}
-\caption{Given the uncolored pattern templates shown on the left, we use our probabilistic factor graph model to generate the pattern colorings shown in the middle. Our factor graph is trained on example patterns created by artists. For comparison, on the right we show randomized colorings of each template.\remark{Other ideas: show no comparison, show O'Donovan comparison} \remark{Visio PDF export for these images is pretty low quality, so I'd vote for keeping everything in TeX and using PNGs/tables.}}
+\caption{Given the uncolored pattern templates shown on the left, we use our probabilistic factor graph model to generate the pattern colorings shown in the middle. Our factor graph is trained on example patterns created by artists. For comparison, on the right we show randomized colorings of each template.\remark{Other ideas: show no comparison, show O'Donovan comparison}}
 \label{fig:teaser}
 \vspace{-1.0em}
 
