--- a/latex/siggraph2013/results.tex
+++ b/latex/siggraph2013/results.tex
@@ -67,7 +67,7 @@ Unconstrained sampling&Constrained sampling\\
 Artist A&Artist B\\
 \end{tabular}
 
-\caption{Our data-driven approach makes it easy to capture the styles of different artists. Here, we show results sampled from two different models, each trained on 100 images of a single artist.}
+\caption{Our data-driven approach makes it easy to capture the styles of different artists. Here, we show results sampled from two different models, each trained on 100 images of a single artist.~\remark{D: We should show some representative images from each artist, so the reader can see that not only are these two results different, but they also capture each intended style.}}
 \vspace{-1.0em}
 \end{figure*}
 
