--- a/latex/siggraph2013/dataset.tex
+++ b/latex/siggraph2013/dataset.tex
@@ -1,6 +1,10 @@
 \section{Dataset}
 \label{sec:dataset}
 
-%TODO: Mention/Describe Colourlovers dataset somewhere. Briefly describe image preprocessing, and final renderings (probably this will be in the probabilistic model section?). 
+%TODO: Mention/Describe Colourlovers dataset somewhere. Briefly describe image preprocessing. 
+To build a data-driven model, we require a source of training data. For the experiments in this paper, we used a dataset of colored patterns and their respective source palettes, scraped from the Colourlovers website. The dataset contains 100 colored patterns for each of 82 artists---8200 patterns in total. We chose artists in order of their most popular pattern and if he or she had created at least 100 patterns total. The original format of the patterns are vector images, where each region is mapped to a color in the source palette. However, our dataset only contains the rasterized patterns, which is the only format freely available on the website. Thus, we must pre-process the rasterized patterns in order to create pattern templates for training.
 
-To build a data-driven model, we require a source of training data. For the experiments in this paper, we used a dataset of colored patterns scraped from the Colourlovers website. The dataset contains 100 colored patterns for each of 82 artists---8200 patterns in total. The artists were chosen based on TODO.~\remark{Chosen based on popularity? Also, describe the image preprocessing we do (because we dont' have access to the original vector artwork?)}
+To create a pattern template from a rasterized pattern, we must map each pixel to a color in the source palette. To reduce quantization noise, we look at the closest palette colors in the 8x8 neighborhood for each pixel, and map the pixel to the mode color. However, the quantized image often still has pixel noise, particularly for more complex patterns with layer blending effects. Thus, we group all connected components that are under a threshold size (in this case, 0.05\% image size) under one 'noise' segment. Each other pattern segment is defined as a set of connected components that are 2 pixels or closer to each other, to account for pixel noise. Color groups are now created from segments with the same palette color.
+
+
+%The artists were chosen based on TODO.~\remark{Chosen based on popularity? Also, describe the image preprocessing we do (because we dont' have access to the original vector artwork?)}
