Added a reference to background, a few wording tweaks

--- a/latex/siggraph2013/background.tex
+++ b/latex/siggraph2013/background.tex
@@ -1,18 +1,20 @@
 \section{Background}
 \label{sec:background}
 
-Related work has tackled problems similar to the one we address in this paper. While our approach builds on some of the ideas and algorithms presented in past reserach, none of these methods alone are sufficient to meet the goals of this paper.
+Related work has tackled problems similar to the one we address in this paper. While our approach builds on some of the ideas and algorithms presented in past research, none of these methods alone are sufficient to meet the goals of this paper.
 
-\paragraph{Segmented image colorization}
+%\paragraph{Segmented image colorization}
+\paragraph{Creative color support tools}
 In the work most similar in goal to our own, Sauvaget and colleagues describe a system that takes as input an image divided into segments and a set of colors and computes a `harmonious' assignment of colors to segments~\shortcite{ColorizationUsingHarmony}. This system can produce pleasing results, but it is based on ad-hoc `contrast of proportion' rules. These rules require the user to specify the set of colors to be used, and their relative amounts, in advance. Such requirements stand in conflict with our goal of supporting exploratory coloring, in which the user does not know in advance the colors she wants and would like to see many plausible suggestions. In contrast, our model is trained from artist-created images. It does not require the user to specify any colors in advance, but its probabilistic inference framework is general enough to support this input if the user desires it.
 
+In the theme of user exploration, Meier et al. develop a suite of interactive interfaces with a focus on helping users browse color themes and experiment with compositions~\shortcite{ColorPaletteTools}. However, when creating coloring suggestions for a target image, there is little computational guidance. Suggestions are created by showing random assignments of colors from an appealing theme to image regions. In this paper, we explore generating more intelligent coloring suggestions while taking into account user input.
+
 \paragraph{Color harmony \& compatibility}
-The computer graphics, aesthetics, and psychology literatures are replete with theories and models that try to capture the characteristics that make two or more colors compatible with one another~\cite{CohenOrHarmonization,Munsell,PalmerColorPreference}. Recently, O'Donovan and colleagues presented a data-driven model that predicts the numeric ratings people would give to five-color `color themes'~\shortcite{ODonovan}. This model is highly generalizable, and they demonstrate a variety of applications for it, including improving existing themes and suggesting colors to complete a partial theme. Our model includes this compatibility model as one of its terms. However, as we demonstrate in Section~\ref{sec:approach}, this term alone is insufficient to produce good colorings, as it does not take into account the spatial role each color plays in the pattern. Thus, our model uses the distinguishing features of each pattern region and the relationships between regions to constrain the space of colorings that it will suggest.
+%The computer graphics, aesthetics, and psychology literatures are replete with theories and models that try to capture the characteristics that make two or more colors compatible with one another~\cite{CohenOrHarmonization,Munsell,PalmerColorPreference}.
+Computer graphics, aesthetics, and psychology literatures introduce many theories and models that try to explain and predict the compatibility of two or more colors~\cite{CohenOrHarmonization,Munsell,PalmerColorPreference}. Recently, O'Donovan and colleagues presented a data-driven model that predicts the numeric ratings people would give to five-color `color themes'~\shortcite{ODonovan}. This model is highly generalizable, and they demonstrate a variety of applications for it, including improving existing themes and suggesting colors to complete a partial theme. Our model includes this compatibility model as one of its terms. However, as we demonstrate in Section~\ref{sec:approach}, this term alone is insufficient to produce good colorings, as it does not take into account the spatial role each color plays in the pattern. Thus, our model uses the distinguishing features of each pattern region and the relationships between regions to constrain the space of colorings that it will suggest.
 
 \paragraph{Natural image colorization}
-While there is little work directly addressing pattern colorization, researchers have developed many approaches to colorizing grayscale photographic images. By and large, these methods rely either on direct color input from the user~\cite{ScribbleColorization} or from a `source image' whose color properties should be matched~\cite{TransferColorization}. However, there is one approach that works more automatically, using a set of example images as training data~\cite{MultimodalColorization}. It builds up multimodal distributions of color variability given local texture descriptors and combines these into a conditional random field with unary and binary energy terms. The minimum-energy configuration is then found using a graph cut algorithm. Our model employs similar local color distributions but bases them on features from variable-sized pattern regions, rather than small texture patches. We also cast the task of finding good colorizations as a probabilistic inference problem, rather than an optimization. This framework allows our algorithm to explore the space of colorings and suggest multiple good alternatives, whereas a graph cut approach will yield only a single global optimum.
+While there is little work directly addressing pattern colorization, researchers have developed many approaches to colorizing grayscale photographic images. By and large, these methods rely either on direct color input from the user~\cite{ScribbleColorization} or from a `source image' whose color properties should be matched~\cite{TransferColorization}. However, there is one approach that works more automatically, using a set of example images as training data~\cite{MultimodalColorization}. This approach builds up multimodal distributions of color variability given local texture descriptors and combines these into a conditional random field with unary and binary energy terms. The minimum-energy configuration is then found using a graph cut algorithm. Our model employs similar local color distributions but bases them on features from variable-sized pattern regions, rather than small texture patches. We also cast the task of finding good colorizations as a probabilistic inference problem, rather than an optimization. This framework allows our algorithm to explore the space of colorings and suggest multiple good alternatives, whereas a graph cut approach will yield only a single global optimum.
 
 \paragraph{3D model colorization}
-Other recent work has tackled automatic coloring of 3D objects. The DressUp! system suggests plausible outfits---including colors for each clothing item---for virtual characters~\cite{DressUp}. It also employs the color compatibility function of O'Donovan et al.~\shortcite{ODonovan} as part of a probabilistic model, but it does not consider the spatiality of color beyond a top-to-bottom ordering. The Material Memex system models the context-dependent correlation between geometric shape and material properties of 3D object parts~\cite{MaterialMemex}. In a related fashion, the system presented in this paper models the context-dependent correlation between pattern regions and color properties of those regions. The Material Memex does not include any explicit consideration of color compatibility. Additionally, its use of multinomial factors requires a quantization of material configuration space, which can restrict the set of colors the model can possibly suggest. In contrast, our model uses continuous probability distributions.
-
-
+Other recent work has tackled automatic coloring of 3D objects. The DressUp! system suggests plausible outfits---including colors for each clothing item---for virtual characters~\cite{DressUp}. It also employs the color compatibility function of O'Donovan et al.~\shortcite{ODonovan} as part of a probabilistic model, but it does not consider the spatiality of color beyond a top-to-bottom ordering. The Material Memex system models the context-dependent correlation between geometric shape and material properties of 3D object parts~\cite{MaterialMemex}. In a related fashion, the system presented in this paper models the context-dependent correlation between pattern regions and color properties of those regions. The Material Memex does not include any explicit consideration of color compatibility. Additionally, its use of multinomial factors requires a quantization of material configuration space. Since the Memex does not consider colors separately from materials, this quantization can greatly restrict the set of colors the model can possibly suggest. In contrast, our model uses continuous probability distributions.
