A significant pass over the model section.

--- a/latex/siggraph2013/model.tex
+++ b/latex/siggraph2013/model.tex
@@ -3,7 +3,7 @@
 
 \input{notation.tex}
 
-\remark{In every subsection, motivate why this particular term is needed. Briefly relate to any relevant algorithmic details from previous work.}
+%\remark{In every subsection, motivate why this particular term is needed. Briefly relate to any relevant algorithmic details from previous work.}
 
 %To be safe, temporarily separating out the spatial arrangement and color compatibility subsection
 \input{spatialcolor.tex}
