--- a/latex/siggraph2013/notation.tex
+++ b/latex/siggraph2013/notation.tex
@@ -34,6 +34,8 @@
 \newcommand{\segprime}{\segment^{\prime}}
 \newcommand{\groupprime}{\group^{\prime}}
 
+\newcommand{\propName}[1]{\text{\emph{#1}}}
+
 
 % Notational conventions:
 
