A pass over the Introduction, plus some comments. I think it'll take a few more iterations..

--- a/latex/siggraph2013/approach.tex
+++ b/latex/siggraph2013/approach.tex
@@ -4,9 +4,9 @@
 %\remark{D: Tom Funkhouser sold me on the value of this section, and one of the best examples from his papers is in http://www.cs.princeton.edu/~funk/pvg01.pdf. I actually like combining the Approach and Overview sections into one shorter section, though.}
 
 %Restate the goal/problem. Use Sharon's more descriptive definition of a pattern template.
-The goal of this paper is to develop a method for automatically generating pattern coloring suggestions to facilitate the creative coloring process. Although many people can easily detect if a pattern coloring is appealing, creating an appealing coloring can take much more time and effort. The process often involves much trial-and-error as well as tweaking of colors, due to constraints between neighboring regions. Since the relationship between neighboring colors largely impacts color appearance, changing one color also often results in cascading changes to neighboring colors. Even experienced artists create quick thumbnail colorings to explore potential color effects before diving in on their final work~\cite{ColorPaletteTools}. An effective color support system should output a wide variety of appealing colorings, as well as provide controls to let the user personalize suggestions to their preferred coloring style.
+The goal of this paper is to develop a method for automatically generating pattern coloring suggestions to facilitate the creative coloring process. One challenge of such a system is that users may or may not have a target coloring style in mind. In addition, aesthetic taste varies across users and can depend on the situation. Thus, an effective color support system should both output a wide variety of appealing colorings, as well as provide controls to let the user personalize suggestions to their preferred coloring style.
 
-\remark{S: These are things I've read informally before and somewhat experienced, but citing more sources that describes these difficulties in the coloring process might be good. Similar statements on the coloring process would be nice in the introduction as well. Or, we can just mention this in the intro and then shorten the description here}
+%Although many people can easily judge whether a pattern coloring is appealing to them, creating an appealing coloring can take much more time and effort. The process often involves much trial-and-error as well as tweaking of colors, due to constraints between neighboring regions. Since the relationship between neighboring colors largely impacts color appearance, changing one color also often results in cascading changes to neighboring colors.
 
 %Start of notes on pattern template terminology/definition.
 Our approach takes as input a pattern template and any user-provided guidelines if available, and outputs suggested colorings for that pattern template. A pattern template specifies which regions in an image can be colored in, and which regions must map to the same color. For example, an image of a flower on a background may have a template that specifies all petals of the flower must be the same color, and all background regions must be the same color. In the rest of the paper, we refer to the set of regions that map to the same color as a \emph{color group}. Figure~\ref{fig:teaser} shows an example of a pattern template visualized in grayscale, where each different lightness level identifies a different color group. This pattern template representation is relatively easy to author from images composed of segments, such as web designs, renderings of 3D scenes, and line drawings. In this paper, we focus on 2D graphic design patterns. 
